--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
 body{
 	
     font-family: 'Ubuntu', sans-serif !important;
 }
-.parallax { 
+.textheader{
+    color: #009688;
+    font-family: 'Open Sans Condensed', sans-serif !important;
+}
+.parallaxcontacto { 
     /* The image used */
-    background-image: url("../img/fondocontacto2.jpg");
+    background-image: url("../img/fondoe.jpg");
     padding: 0px;
 
     /* Set a specific height */
@@ -22,7 +27,7 @@ body{
     background-image: url("../img/image.jpg");
 
     /* Set a specific height */
-    height: 600px; 
+    height: 650px; 
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -30,7 +35,99 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
-.desc{
+.navbar-custom {
+  background: #2C3E50 !important;
+  /*font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+  text-transform: uppercase;
+  font-weight: 70;
+  border: none;
+}
+.navbar-custom a:focus {
+  outline: none;
+}
+.navbar-custom .navbar-brand {
+  color: white;
+}
+.navbar-custom .navbar-brand:hover,
+.navbar-custom .navbar-brand:focus,
+.navbar-custom .navbar-brand:active,
+.navbar-custom .navbar-brand.active {
+  color: white;
+}
+.navbar-custom .navbar-nav {
+  letter-spacing: 1px;
+}
+.navbar-custom .navbar-nav li a {
+  color: white;
+}
+.navbar-custom .navbar-nav li a:hover {
+  color: #18BC9C;
+  outline: none;
+}
+.navbar-custom .navbar-nav li a:focus,
+.navbar-custom .navbar-nav li a:active {
+  color: white;
+}
+.navbar-custom .navbar-nav li.active a {
+  color: white;
+  background: #2C3E50;
+}
+.navbar-custom .navbar-nav li.active a:hover,
+.navbar-custom .navbar-nav li.active a:focus,
+.navbar-custom .navbar-nav li.active a:active {
+  color: white;
+  background: #2C3E50;
+}
+.navbar-custom .navbar-toggle {
+  color: white;
+  text-transform: uppercase;
+  font-size: 10px;
+  border-color: white;
+}
+.navbar-custom .navbar-toggle:hover,
+.navbar-custom .navbar-toggle:focus {
+  background-color: #2C3E50 !important;
+  color: white;
+  border-color: #2C3E50;
+}
+@media (min-width: 768px) {
+  .navbar-custom {
+    padding: 12px 0;
+    -webkit-transition: padding 0.3s;
+    -moz-transition: padding 0.3s;
+    transition: padding 0.3s;
+  }
+  .navbar-custom .navbar-brand {
+    font-size: 2em;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+  .navbar-custom.affix {
+    padding: 10px 0;
+  }
+  .navbar-custom.affix .navbar-brand {
+    font-size: 1.5em;
+  }
+}
+footer {
+  color: white;
+}
+footer h3 {
+  margin-bottom: 30px;
+}
+footer .footer-above {
+  padding-top: 50px;
+  background-color: #2C3E50;
+}
+footer .footer-col {
+  margin-bottom: 50px;
+}
+footer .footer-below {
+  padding: 25px 0;
+  background-color: #233140;
+}
+.contacto{
 	padding: 0%;
     /*background-color: #0A6CCE;*/
     margin-top: 100px;
