--- a/css/card.css
+++ b/css/card.css
@@ -1,198 +1,80 @@
-@import url(http://fonts.googleapis.com/css?family=Ubuntu);
-
-a.box {
-    color: #fff;
-    background-color: #2f9b9b;
-    display: block;
-    width: 400px;
-    height: 250px;
-    overflow: hidden;
-    position: relative;
-    cursor: pointer;
-    font-family: 'Ubuntu', sans-serif;
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
+.snip1473 {
+  font-family: 'Roboto', Arial, sans-serif;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  margin: 10px 1%;
+  min-width: 230px;
+  max-width: 315px;
+  width: 100%;
+  color: #141414;
+  text-align: left;
+  line-height: 1.4em;
+  background-color: #e6e6e6;
+  padding-top: 88px;
 }
-
-.content {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    top: 0;
-    margin: auto;
-    padding: 0 4em;
-    z-index: 2;
-    height: 3em;
-    transition: all .2s ease;
+.snip1473 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
-
-a:hover .content {
-    height: 8em;
-    transition: all .2s ease;
-    color: #fff !important;
+.snip1473 img {
+  max-width: 100%;
+  vertical-align: top;
+  opacity: 0.85;
 }
-
-h2 {
-    font-size: 2em;
-    font-weight: normal;
-    margin: 0 0 5px 0;
+.snip1473 figcaption {
+  width: 100%;
+  background-color: #141414;
+  padding: 25px;
+  position: relative;
+  color: #ffffff;
 }
-
-.pcard {
-    height: 0;
-    opacity: 0;
-    visibility: hidden;
-    margin: 5px;
-    line-height: 1.5em;
-    
+.snip1473 .profile {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+  max-height: 88px;
+  opacity: 1;
 }
-
-a:hover p{
-    height: 3em;
-    opacity: 1;
-    visibility: visible;
-    transition: all .2s ease;
+.snip1473 h3 {
+  font-size: 1.3em;
+  margin: 25px;
+  font-weight: 300;
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: right;
 }
-
-.link {
-    height: 1.5em;
-    line-height: 1.5;
-    transition: all .2s ease;
-    display: block;
-    font-size: 0.85em;
-    font-style: italic;
+.snip1473 h3 span {
+  display: block;
+  font-size: 0.65em;
+  font-weight: 600;
+  color: #bdc3c7;
 }
-
-a:hover .link {
-    transition: all .2s ease;
+.snip1473 blockquote {
+  margin: 0 0 10px;
+  padding: 0 0 30px;
+  letter-spacing: 1px;
+  opacity: 0.8;
+  font-style: italic;
+  font-weight: 300;
 }
-
-
-
-@import url(http://fonts.googleapis.com/css?family=Raleway:200);
-
-
-
-h4,
-.h4{
-    font-size: 18px;
-    font-weight: bold;
+.snip1473 blockquote:after {
+  font-family: 'FontAwesome';
+  content: "\201C";
+  position: absolute;
+  font-size: 180px;
+  line-height: 1em;
+  color: #212121;
+  font-style: normal;
+  content: "\201D";
+  right: 20px;
+  bottom: -105px;
 }
-
-
-.team
-{
-    width: 370px;
-    min-height: 100%;
-    border: 1px solid rgba(133,133,133,.15);
-    background-color: #fff;
-    -moz-box-shadow: 0 0 8px rgba(0,0,0,.09);
-    -webkit-box-shadow: 0 0 8px rgba(0,0,0,.09);
-    box-shadow: 0 0 8px rgba(0,0,0,.09);
-    float: left;
-    margin-left: 16px;
-}
-.teamimgcharly
-{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    margin-top: -80px;
-    width:170px;
-    height:170px;
-    /*background: #1bbc9d;*/
-    background-image: url("../img/charly.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 50%;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.09);
-}
-.teamimgbeto
-{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    margin-top: -80px;
-    width:170px;
-    height:170px;
-    /*background: #1bbc9d;*/
-    background-image: url("../img/beto.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 50%;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.09);
-}
-
-.teamsocial
-{
-    height: 48px;
-    background-color: #f7f5f5;
-    position: relative;
-    bottom: -14px;
-    /*left: 0;*/
-
-}
-
-.facebook-team
-{
-    float: left;
-    width: 48px;
-    height: 48px;
-    color: #D1CFCF;
-    display:block;
-    font-size:30px;
-    padding: 7px;
-}
-
-.twitter-team
-{
-    float: left;
-    width: 48px;
-    height: 48px;
-    color: #D1CFCF;
-    display:block;
-    font-size:30px;
-    padding: 7px;
-}
-
-.google-team
-{
-    float: left;
-    width: 48px;
-    height: 48px;
-    color: #D1CFCF;
-    display:block;
-    font-size:30px;
-    padding: 7px;
-}
-
-.pinterest-team
-{
-    float: left;
-    width: 48px;
-    height: 48px;
-    color: #D1CFCF;
-    display:block;
-    font-size:30px;
-    padding: 7px;
-}
-
-.facebook-team:hover
-{
-    color: #3B5998;
-}
-
-.twitter-team:hover
-{
-    color: #29B3E1;
-}
-
-.google-team:hover
-{
-    color: #DE5845;
-}
-
-.pinterest-team:hover
-{
-    color: #C51C23;
+/* Demo purposes only */
+body {
+  background-color: #212121;
 }
