--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,117 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Ubuntu');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
 body{
-	
+  
     font-family: 'Ubuntu', sans-serif !important;
+}
+
+
+.record_wrap {
+  width:90%;
+  margin:100px auto;
+  justify-content:space-between;
+}
+
+.record {
+  margin-top: 10px;
+  position:relative;
+  width:30%;
+  height:20vw;
+  overflow:hidden;
+  // border:2px solid #ccc;
+  @include shadow(1);
+  background-color:#fff;
+  cursor:pointer;
+  transition: box-shadow 300ms;
+  &:hover {
+    @include shadow(2);
+  }
+}
+
+.record {
+  position:relative;
+  width:30%;
+  height:20vw;
+  overflow:hidden;
+  // border:2px solid #ccc;
+  @include shadow(1);
+  background-color:#fff;
+  cursor:pointer;
+  transition: box-shadow 300ms;
+  &:hover {
+    @include shadow(2);
+  }
+}
+
+.record-arrow {
+  position:absolute;
+  padding:3%;
+  img {
+    width:8%;
+    height:8%;
+  }
+  background-image:url("http://www.portalguard.com/images/icons/right-arrow.png");
+  transform:translateX(75%);
+  opacity:0;
+  transition:all 300ms ease-in-out;
+}
+
+.record:hover .record-arrow {
+  transform:translateX(85%);
+  opacity:1;
+}
+
+.record-display {
+  width:100%;
+  height:100%;
+  top:0;
+  background-image:url("http://timblin.co/img/post/bitter/bitter.jpg");
+  background-size:cover;
+  background-position:center center;
+}
+.record:hover .record-display {
+  height:20%;
+  @include shadow(1);
+}
+
+.record-desc {
+  margin:20px 0 0 10px;
+  h1 {
+    margin:5px 0;
+    font-size:1.3em;
+    font-weight:700;
+  }
+  p {
+    font-size:0.75em;
+    line-height:1.4em;
+    color:#666;
+  }
+  opacity:0;
+  transition: opacity 400ms ease-in-out 190ms ;
+}
+
+#record1 {
+  transition:height 700ms cubic-bezier(0.54, 0.21, 0.18, 1.35);
+}
+#record2 {
+  transition:height 500ms cubic-bezier(0.54, 0.21, 0.18, 1.35);
+}
+#record3 {
+  transition:height 300ms cubic-bezier(0.54, 0.21, 0.18, 1.35);
+}
+
+.record:hover .record-desc {
+  opacity:1;
+}
+
+.tagline {
+  margin:50px 0;
+  text-align:center;
+  color:green;
+}
+.logofront{
+   width: 20%;
+   padding-top: 15%;
 }
 .textheader{
     color: #009688;
@@ -90,7 +199,38 @@ body{
   color: white;
   border-color: #2C3E50;
 }
-@media (min-width: 768px) {
+
+@media (max-width: 1024px){
+  .espaciop {
+    margin-bottom: 20px;
+    margin-top: 6px !important;
+}
+  .logofront {
+    width: 38% !important;
+    padding-top: 15% !important;
+}
+.textocontacto{
+  font-size: 20px;
+  text-align: center;
+}
+.imagen-nosotros {
+    height: 399px;
+}
+}
+
+
+@media (max-width: 768px) {
+  .logofront {
+    
+    padding-top: 30% !important;
+    width: 46% !important;
+}
+.imagen-nosotros {
+    height: 1600px;
+}
+.formcontac{
+  margin-left: 25px;
+}
   .navbar-custom {
     padding: 12px 0;
     -webkit-transition: padding 0.3s;
@@ -109,7 +249,24 @@ body{
   .navbar-custom.affix .navbar-brand {
     font-size: 1.5em;
   }
+
+  .record {
+    position: relative;
+    width: 30%;
+    height: 62vw;
+    overflow: hidden;
 }
+}
+
+
+
+
+
+
+
+
+
+
 footer {
   color: white;
 }
@@ -128,7 +285,7 @@ footer .footer-below {
   background-color: #233140;
 }
 .contacto{
-	padding: 0%;
+  padding: 0%;
     /*background-color: #0A6CCE;*/
     margin-top: 100px;
     margin-bottom: 100px;
@@ -217,92 +374,38 @@ footer .footer-below {
 
 
 
-
-.record_wrap {
-  width:90%;
-  margin:100px auto;
-  display:flex;
-  justify-content:space-between;
+@media (max-width: 600px) {
+.formcontac {
+    margin-left: 0px;
+}
+.imagen-nosotros {
+    height: 1300px;
+}
+}
+@media (max-width: 412px){
+.logofront {
+    padding-top: 50% !important;
+    width: 78% !important;
 }
 
-.record {
-  position:relative;
-  width:30%;
-  height:20vw;
-  overflow:hidden;
-  // border:2px solid #ccc;
-  @include shadow(1);
-  background-color:#fff;
-  cursor:pointer;
-  transition: box-shadow 300ms;
-  &:hover {
-    @include shadow(2);
-  }
+.imagen-nosotros {
+    height: 912px;
 }
 
-.record-arrow {
-  position:absolute;
-  padding:3%;
-  img {
-    width:8%;
-    height:8%;
-  }
-  background-image:url("http://www.portalguard.com/images/icons/right-arrow.png");
-  transform:translateX(75%);
-  opacity:0;
-  transition:all 300ms ease-in-out;
+}
+@media (max-width: 414px){
+.logofront {
+    padding-top: 43% !important;
+    width: 100% !important;
 }
 
-.record:hover .record-arrow {
-  transform:translateX(85%);
-  opacity:1;
+
 }
 
-.record-display {
-  width:100%;
-  height:100%;
-  top:0;
-  background-image:url("http://timblin.co/img/post/bitter/bitter.jpg");
-  background-size:cover;
-  background-position:center center;
+@media (max-width: 360px) {
+.logofront {
+    width: 100% !important;
+    padding-top: 67% !important;
 }
-.record:hover .record-display {
-  height:20%;
-  @include shadow(1);
 }
 
-.record-desc {
-  margin:20px 0 0 10px;
-  h1 {
-    margin:5px 0;
-    font-size:1.3em;
-    font-weight:700;
-  }
-  p {
-    font-size:0.75em;
-    line-height:1.4em;
-    color:#666;
-  }
-  opacity:0;
-  transition: opacity 400ms ease-in-out 190ms ;
-}
-
-#record1 {
-  transition:height 700ms cubic-bezier(0.54, 0.21, 0.18, 1.35);
-}
-#record2 {
-  transition:height 500ms cubic-bezier(0.54, 0.21, 0.18, 1.35);
-}
-#record3 {
-  transition:height 300ms cubic-bezier(0.54, 0.21, 0.18, 1.35);
-}
-
-.record:hover .record-desc {
-  opacity:1;
-}
-
-.tagline {
-  margin:50px 0;
-  text-align:center;
-  color:green;
-}
