--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,103 @@ body{
     font-family: 'Ubuntu', sans-serif !important;
 }
 
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
+#snip1473 {
+    font-family: 'Roboto', Arial, sans-serif;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 16px 14%;
+    min-width: 230px;
+    max-width: 315px;
+    width: 100%;
+    color: #141414;
+    text-align: left;
+    line-height: 1.4em;
+    background-color: #e6e6e6;
+    padding-top: 88px;
+}
+#snip1474 {
+    font-family: 'Roboto', Arial, sans-serif;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 16px 5%;
+    min-width: 230px;
+    max-width: 315px;
+    width: 100%;
+    color: #141414;
+    text-align: left;
+    line-height: 1.4em;
+    background-color: #e6e6e6;
+    padding-top: 88px;
+}
+
+
+.snip1473 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.snip1473 img {
+  max-width: 100%;
+  vertical-align: top;
+  opacity: 0.85;
+}
+.snip1473 figcaption {
+  width: 100%;
+  background-color: #141414;
+  padding: 25px;
+  position: relative;
+  color: #ffffff;
+}
+.snip1473 .profile {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+  max-height: 88px;
+  opacity: 1;
+}
+.snip1473 h3 {
+  font-size: 1.3em;
+  margin: 25px;
+  font-weight: 300;
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: right;
+}
+.snip1473 h3 span {
+  display: block;
+  font-size: 0.65em;
+  font-weight: 600;
+  color: #bdc3c7;
+}
+.snip1473 blockquote {
+  margin: 0 0 10px;
+  padding: 0 0 30px;
+  letter-spacing: 1px;
+  opacity: 0.8;
+  font-style: italic;
+  font-weight: 300;
+}
+.snip1473 blockquote:after {
+  font-family: 'FontAwesome';
+  content: "\201C";
+  position: absolute;
+  font-size: 180px;
+  line-height: 1em;
+  color: #212121;
+  font-style: normal;
+  content: "\201D";
+  right: 20px;
+  bottom: -105px;
+}
+/* Demo purposes only */
+body {
+  background-color: #212121;
+}
 
 .record_wrap {
   width:90%;
@@ -61,11 +158,20 @@ body{
   opacity:1;
 }
 
+.imgrecord-1{
+  background-image:url("../img/paginasweb.jpg");
+}
+
+.imgrecord-2{
+  background-image:url("../img/responsivo.jpg");
+}
+.imgrecord-3{
+  background-image:url("../img/back.jpg");
+}
 .record-display {
   width:100%;
   height:100%;
   top:0;
-  background-image:url("http://timblin.co/img/post/bitter/bitter.jpg");
   background-size:cover;
   background-position:center center;
 }
@@ -201,6 +307,37 @@ body{
 }
 
 @media (max-width: 1024px){
+  #snip1473 {
+    font-family: 'Roboto', Arial, sans-serif;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 16px 10%;
+    min-width: 230px;
+    max-width: 315px;
+    width: 100%;
+    color: #141414;
+    text-align: left;
+    line-height: 1.4em;
+    background-color: #e6e6e6;
+    padding-top: 88px;
+}
+  #snip1474 {
+    font-family: 'Roboto', Arial, sans-serif;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 16px 2%;
+    min-width: 230px;
+    max-width: 315px;
+    width: 100%;
+    color: #141414;
+    text-align: left;
+    line-height: 1.4em;
+    background-color: #e6e6e6;
+    padding-top: 88px;
+}
+
   .espaciop {
     margin-bottom: 20px;
     margin-top: 6px !important;
@@ -214,19 +351,49 @@ body{
   text-align: center;
 }
 .imagen-nosotros {
-    height: 399px;
+    height: 600px;
 }
 }
 
 
 @media (max-width: 768px) {
+  #snip1473 {
+    font-family: 'Roboto', Arial, sans-serif;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 10px 2%;
+    min-width: 230px;
+    max-width: 315px;
+    width: 100%;
+    color: #141414;
+    text-align: left;
+    line-height: 1.4em;
+    background-color: #e6e6e6;
+    padding-top: 88px;
+}
+ #snip1474 {
+    font-family: 'Roboto', Arial, sans-serif;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 11px 1%;
+    min-width: 230px;
+    max-width: 315px;
+    width: 100%;
+    color: #141414;
+    text-align: left;
+    line-height: 1.4em;
+    background-color: #e6e6e6;
+    padding-top: 88px;
+}
   .logofront {
     
     padding-top: 30% !important;
     width: 46% !important;
 }
 .imagen-nosotros {
-    height: 1600px;
+    height: 1800px;
 }
 .formcontac{
   margin-left: 25px;
@@ -375,8 +542,78 @@ footer .footer-below {
 
 
 @media (max-width: 600px) {
+  #snip1474 {
+    font-family: 'Roboto', Arial, sans-serif;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 10px 20%;
+    min-width: 230px;
+    max-width: 315px;
+    width: 100%;
+    color: #141414;
+    text-align: left;
+    line-height: 1.4em;
+    background-color: #e6e6e6;
+    padding-top: 88px;
+}
+#snip1473 {
+    font-family: 'Roboto', Arial, sans-serif;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 10px 20%;
+    min-width: 230px;
+    max-width: 315px;
+    width: 100%;
+    color: #141414;
+    text-align: left;
+    line-height: 1.4em;
+    background-color: #e6e6e6;
+    padding-top: 88px;
+}
 .formcontac {
     margin-left: 0px;
+}
+.imagen-nosotros {
+    height: 1600px;
+}
+}
+@media (max-width: 414px){
+.logofront {
+    padding-top: 43% !important;
+    width: 100% !important;
+}
+
+#snip1473 {
+    font-family: 'Roboto', Arial, sans-serif;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 10px 1%;
+    min-width: 230px;
+    max-width: 315px;
+    width: 100%;
+    color: #141414;
+    text-align: left;
+    line-height: 1.4em;
+    background-color: #e6e6e6;
+    padding-top: 88px;
+}
+#snip1474 {
+    font-family: 'Roboto', Arial, sans-serif;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 10px 1%;
+    min-width: 230px;
+    max-width: 315px;
+    width: 100%;
+    color: #141414;
+    text-align: left;
+    line-height: 1.4em;
+    background-color: #e6e6e6;
+    padding-top: 88px;
 }
 .imagen-nosotros {
     height: 1300px;
@@ -389,18 +626,11 @@ footer .footer-below {
 }
 
 .imagen-nosotros {
-    height: 912px;
+    height: 1300px;
 }
 
 }
-@media (max-width: 414px){
-.logofront {
-    padding-top: 43% !important;
-    width: 100% !important;
-}
 
-
-}
 
 @media (max-width: 360px) {
 .logofront {
